# distributed-social-networks

./: .gitignore  BIndex.md  LICENSE  README.md  atproto-bsky-relay.csv  atproto.csv  centralization-stats.py  centralization_stats.py  cert-byid.csv  diff-from-current.sh  fedilist-fromhtml.csv  fedilist.csv  fetch-bsky.py  fetch-fedilist.py  fetch-sh.py  hhi.py  hosting-byid.csv  newest.sh  sh-fromhtml.csv  update-all.sh  update-data.sh  update-datafile.sh
data-fetchers/: fetch-bsky.py  fetch-fedidb.py  fetch-fedilist.py  fetch-hosting-all-countries.py  fetch-hosting-iyp-worldwide.py  fetch-hosting-iyp.py  fetch-instances.py  fetch-sh.py
data-fetchers/at-mau-watcher/rs/: Cargo.toml  README.md
data-fetchers/at-mau-watcher/rs/src/: main.rs
data-processing/: find-trends.py  match-hosts.py  trends-config.json
data-static/: atproto-bsky-relay.csv  dns-byid.csv  fedidb-fromapi.csv  fedilist-fromhtml.csv  hosting-worldwide-from-iyp.csv  instances-fromapi.csv  sh-fromhtml.csv  worldwide.csv
habib-paper/: README.md  original-hosting.csv  transform.py
helpers/: compare-relays.sh  diff-from-current.sh  fedi-mau-from-nodeinfo.sh  fetch-fedi-nodeinfo.sh  pds-mau-from-relays.sh  recalc-fedi-nodeinfo.sh  update-all.sh  update-datafile.py  update-datafile.sh  update-latest-link.sh  uploadfiles.sh  weekago.sh
lin-paper/: README.md  all_providers_com_common_2021-06-08_0914.csv
liu-paper/: README.md  all_providers_common_2021-06-08_0914.csv  all_providers_gov_common_2021-06-08_0914.csv
www/: at-mau-watcher.html  csv-viewer.html  data.js  data.json  fetch-nodeinfo-bot.html  (+1 more)
(+263 files in other folders)
