[package]
name = "at-mau-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
im = { version = "15", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
futures = "0.3"
ipld-core = { version = "0.4.1", default-features = false, features = ["std"] }
serde_ipld_dagcbor = { version = "0.6", features = ["std"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
# NOTE: Adjust these versions if your Atrium dependency differs.
atrium-api = "0.25.7"
atrium-xrpc = "0.12.4"
